--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.scss">
-    <title>Document</title>
+    <title>Journey - Holiday Itinerary</title>
 </head>
 
 <body>
-    <h1 class="header">Hello Josh</h1>
+    <div id="root"></div>
     <script src="main.js"></script>
 </body>
 
