Restructuring web app code
Created the HTML structure, created the home class in JS that manages the HTML

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -10,7 +10,27 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">
+
+        <main id="page-home">
+            <h1>Journey</h1>
+            <h2>Find your next adventure</h2>
+            <button id="itinerary-btn" class="itinerary-btn btn">
+                Itinerary Planner
+            </button>
+            <button id="discovery-btn" class="discovery-btn btn">
+                Discover Destinations
+            </button>
+        </main>
+
+
+        <main id="page-itinerary-planner">
+            <h1 id="page-itinerary-planner-site-title">Journey</h1>
+            <h2>Itinierary Planner</h2>
+        </main>
+    </div>
+
+
     <script src="main.js"></script>
 </body>
 
