Created trip preview component
Trip preview component is created seperately from itinerary page, so that it is more maintainable & possibly reusable.

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -27,6 +27,9 @@
         <main id="page-itinerary-planner">
             <h1 id="page-itinerary-planner-site-title">Journey</h1>
             <h2>Itinierary Planner</h2>
+            <div id="page-itinerary-planner-trips">
+
+            </div>
         </main>
     </div>
 
