Added styling to Itinerary Page
Created hero banner component & added add itinerary button to itinerary page

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -15,11 +15,10 @@
     <div id="root">
 
         <main id="page-home" class="overlay">
-            <div class="homepage-container">
-
+            <div class="page-home-container">
                 <div id="page-home-header" class="header">
                     <div class="centered-container logo-container">
-                        <p class="logo">Journey</p>
+                        <img class="logo" src="img/Journeylogo.png" alt="Journey Logo">
                     </div>
                 </div>
                 <div class="homepage-content">
@@ -40,20 +39,22 @@
 
 
         <main id="page-itinerary-planner">
-            <div class="logo-container">
-                <p class="logo" id="page-itinerary-planner-site-title">Journey</p>
-            </div>
-            <h2>Itinierary Planner</h2>
-            <div id="page-itinerary-planner-trips">
-
+            <div class="page-itinerary-planner-container">
+                <div id="page-itinerary-planner-hero-container"></div>
+                <div id="add-itinerary-button-container" class="add-itinerary-button-container">
+                    <button id="add-itinerary-btn" class="add-itinerary-btn btn">
+                        + Add Itinerary
+                    </button>
+                </div>
+                <div id="page-itinerary-planner-trips"></div>
             </div>
         </main>
     </div>
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-container">
             <p>WORK ON FOOTER!!!!!!</p>
         </div>
-    </footer>
+    </footer> -->
 
 
     <script src="main.js"></script>
