Itinerary Planner page styling completed
Itinerary planner page tabs styling & trips preview

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -46,7 +46,17 @@
                         + Add Itinerary
                     </button>
                 </div>
-                <div id="page-itinerary-planner-trips"></div>
+                <div class="page-itinerary-existing itineraries">
+                    <div id="page-itinerary-planner-tabs" class="tabs">
+                        <button class="itinerary-tabs tab active" id="upcoming-btn">Upcoming</button>
+
+                        <button class="itinerary-tabs tab" id="past-btn">Past</button>
+
+                    </div>
+                    <!-- <div id="page-itinerary-planner-trips"></div> -->
+                    <div id="page-itinerary-planner-upcoming-trips" class="page-itinerary-planner-trips"></div>
+                    <div id="page-itinerary-planner-past-trips" class="page-itinerary-planner-trips"></div>
+                </div>
             </div>
         </main>
     </div>
